--- a/style.css
+++ b/style.css
@@ -655,7 +655,7 @@ input:required {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 880px;
+  min-height: 880px;
   /* background-color: #fc6060;  */
 }
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
